2013-05-06  The Parasithe  <bipbip500@hotmail.com>

	* Game1.cs:
	* TestScreen.cs:
	* IDraw.cs:
	* Screen.cs:
	* Drawable.cs:
	* Container.cs:
	* DrawableImage.cs:
	* ChampionsInfo.cs:
	* DrawableTileMap.cs:
	* DrawableRectangle.cs:
	* DrawableChampion.cs:
	* DrawableCircleContour.cs: 

<<<<<<< Upstream, based on origin/master
2013-05-06  Jesse  <>

	* champions.xml:
	* ChampionsInfo.cs: 

2013-05-06  Jesse  <>

	* champions.xml: 

2013-05-03  Jesse  <>

	* TestScreen.cs: 

2013-05-01  Jesse  <>

	* champions.xml: 

2013-05-01  Jesse  <>

	* champions.xml:
	* GREATClient.Linux.csproj:
	* GREATClient.Windows.csproj:
	* ChampionsInfo.cs: 

2013-04-30  Jesse  <>

	* TestScreen.cs:
	* GREATClient.Linux.csproj:
	* GREATClient.Windows.csproj:
	* ChampionsInfo.cs:
	* DrawableTileMap.cs:
	* DrawableChampion.cs: 

2013-04-30  Jesse  <>

	* TestScreen.cs: 

2013-04-18  The Parasithe  <bipbip500@hotmail.com>
=======
2013-05-06  The Parasithe  <bipbip500@hotmail.com>
>>>>>>> add3c26 Add OnUpdate and OnDraw. The objective is to care about Updatable and Drawable

	* Game1.cs:
	* TestScreen.cs:
	* IDraw.cs:
	* Screen.cs:
	* Drawable.cs:
	* Container.cs:
	* DrawableImage.cs:
	* ChampionsInfo.cs:
	* DrawableTileMap.cs:
	* DrawableRectangle.cs:
	* DrawableCircleContour.cs: 

2013-05-06  Jesse  <>

	* champions.xml: 

2013-05-03  Jesse  <>

	* TestScreen.cs: 

2013-05-01  Jesse  <>

	* champions.xml: 

2013-05-01  Jesse  <>

	* champions.xml:
	* GREATClient.Linux.csproj:
	* GREATClient.Windows.csproj:
	* ChampionsInfo.cs: 

2013-04-30  Jesse  <>

	* TestScreen.cs:
	* GREATClient.Linux.csproj:
	* GREATClient.Windows.csproj:
	* ChampionsInfo.cs:
	* DrawableTileMap.cs:
	* DrawableChampion.cs: 

2013-04-30  Jesse  <>

	* TestScreen.cs: 

2013-04-18  The Parasithe  <bipbip500@hotmail.com>

	* Game1.cs:
	* circle.png:
	* IDraw.cs:
	* TestScreen.cs:
	* Screen.cs:
	* triangle.png:
	* Drawable.cs:
	* GREATClient.Linux.csproj:
	* GREATClient.Windows.csproj:
	* DrawableCircle.cs: