@@ -1,3 +1,13 @@
+2013-05-22  The Parasithe  <bipbip500@hotmail.com>
+
+	* Game1.cs:
+	* IDraw.cs:
+	* TestScreen.cs:
+	* GREATClient.Linux.csproj:
+	* DrawableImage.cs:
+	* GREATClient.Windows.csproj:
+	* DrawableSprite.cs: 
+
 2013-05-06  The Parasithe  <bipbip500@hotmail.com>
 
 	* Game1.cs:
